# PDF2Markwon-Agent

./: .coverage  .coverage.Qianweis-Macbook-Pro.local.99984.XSzclWdx  .env.example  .gitignore  README.md  README_CN.md  pyproject.toml
.taskmaster/docs/: prd.txt
PDF/: GEAM.md  HNeRV.md  NeRV.md  Trio.md  block_diffusion.md  dLLM2.md  f-RAG.md
src/pdf_to_markdown/: cli.py  exceptions.py  logger.py  markdown_converter.py  ocr_client.py  ocr_processor.py  pdf_converter.py
tests/: test_cli.py  test_markdown_converter.py  test_ocr_client.py  test_ocr_processor.py  test_pdf_converter.py
